choice関数を整理

--- a/test.ipynb
+++ b/test.ipynb
@@ -2177,9 +2177,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ecb686c",
+   "metadata": {},
+   "source": [
+    "# 関数をクラスの属性に使う"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "133cd0ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class player():\n",
+    "    def __init__(self,func):\n",
+    "        self.func = func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e86ac95f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def time(a:int,b:int):\n",
+    "    return a*b\n",
+    "\n",
+    "def plus(a:int,b:int):\n",
+    "    return a+b\n",
+    "\n",
+    "time_player = player(func=time)\n",
+    "print(time_player.func(2,3))\n",
+    "\n",
+    "add_player = player(func=plus)\n",
+    "print(add_player.func(2,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c82d01",
+   "metadata": {},
+   "source": [
+    "# dict型に関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ad3ad134",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def plus(a,b):\n",
+    "    return a+b\n",
+    "\n",
+    "def time(a,b):\n",
+    "    return a*b\n",
+    "\n",
+    "funcs = {'sum':plus,'hyper':time}\n",
+    "copy1 = funcs['sum']\n",
+    "copy2 = funcs['hyper']\n",
+    "print(copy1(2,3))\n",
+    "print(copy2(2,3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ecb686c",
+   "id": "65d793b7",
    "metadata": {},
    "outputs": [],
    "source": []
