勝利判定が出ないバグの修正

--- a/test.ipynb
+++ b/test.ipynb
@@ -34,6 +34,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fe6be666",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "loding_index = 0\n",
+    "loding_rows = 1 * 10**1\n",
+    "with open('result/log.csv', 'r') as file:\n",
+    "  csv_reader = csv.reader(file)\n",
+    "  for row in csv_reader:\n",
+    "    loding_index += 1\n",
+    "    if loding_index < loding_rows+1:\n",
+    "        log = list(row)\n",
+    "        result = log[-1]\n",
+    "        if (result!='win' and result!='lose'):\n",
+    "          print('勝利判定が行われていないデータを検知')\n",
+    "          print(loding_index)\n",
+    "          break\n",
+    "        # log = log[:-1]\n",
+    "        # for l in log:\n",
+    "        #   data = {}\n",
+    "        #   l = ast.literal_eval(l)\n",
+    "        #   now = l['now']\n",
+    "        #   kind = l['kind']\n",
+    "        #   choices = l['choices']\n",
+    "        #   choice = l['choice']\n",
+    "        #   # print(now.keys())\n",
+    "        #   card_number = now['card_number']\n",
+    "        #   my_hands = now['my_hands']\n",
+    "        #   my_played = now['my_played']\n",
+    "        #   other_played = now['other_played']\n",
+    "        #   look_hands = now['look_hands']\n",
+    "        #   looked_hands = now['looked_hands']\n",
+    "        #   pred_data = now['pred']\n",
+    "        #   reincarnation = int(now['reincarnation'])\n",
+    "          \n",
+    "        #   data['card_number'] = int(card_number)\n",
+    "        #   for j in range(2):\n",
+    "        #     if j < len(my_hands):\n",
+    "        #       data[f'my_hands_{j}'] = int(my_hands[j])\n",
+    "        #     else:\n",
+    "        #       data[f'my_hands_{j}'] = 0\n",
+    "\n",
+    "        #   for j in range(15):\n",
+    "        #     if j < len(my_played):\n",
+    "        #       data[f'my_played_{j}'] = int(my_played[j])\n",
+    "        #     else:\n",
+    "        #       data[f'my_played_{j}'] = 0\n",
+    "          \n",
+    "        #   for j in range(len(list(other_played.keys()))):\n",
+    "        #     for k in range(15):\n",
+    "        #       if k < len(other_played[j]):\n",
+    "        #         data[f'other_played_{j}_{k}'] = int(other_played[j][k])\n",
+    "        #       else:\n",
+    "        #         data[f'other_played_{j}_{k}'] = 0\n",
+    "            \n",
+    "        #     for k in range(15):\n",
+    "        #       if k < len(look_hands[j]):\n",
+    "        #         data[f'look_hands_{j}_{k}'] = int(look_hands[j][k])\n",
+    "        #       else:\n",
+    "        #         data[f'look_hands_{j}_{k}'] = 0\n",
+    "            \n",
+    "        #     for k in range(15):\n",
+    "        #       if k < len(looked_hands[j]):\n",
+    "        #         data[f'looked_hands_{j}_{k}'] = int(looked_hands[j][k])\n",
+    "        #       else:\n",
+    "        #         data[f'looked_hands_{j}_{k}'] = 0\n",
+    "            \n",
+    "        #     for k in range(2):\n",
+    "        #       if k < len(pred_data[j]):\n",
+    "        #         p = pred_data[j][k]\n",
+    "        #         data[f'pred_{j}_{k}_object'] = int(p['object'])\n",
+    "        #         data[f'pred_{j}_{k}_predcard'] = int(p['pred_card'])\n",
+    "        #       else:\n",
+    "        #         data[f'pred_{j}_{k}_object'] = 0\n",
+    "        #         data[f'pred_{j}_{k}_predcard'] = 0\n",
+    "              \n",
+    "        #       if k < len(pred_data[-1]):\n",
+    "        #         p = pred_data[-1][k]\n",
+    "        #         data[f'pred_{-1}_{k}_object'] = int(p['object'])\n",
+    "        #         data[f'pred_{-1}_{k}_predcard'] = int(p['pred_card'])\n",
+    "        #       else:\n",
+    "        #         data[f'pred_{-1}_{k}_object'] = 0\n",
+    "        #         data[f'pred_{-1}_{k}_predcard'] = 0\n",
+    "          \n",
+    "        #   data['reincarnation'] = reincarnation\n",
+    "        #   data['kind'] = kind\n",
+    "        #   for i in range(10):\n",
+    "        #     if i < len(choices):\n",
+    "        #       data[f'choices_{i}'] = choices[i]\n",
+    "        #     else:\n",
+    "        #       data[f'choices_{i}'] = 0\n",
+    "        #   data['choice'] = choice\n",
+    "        #   data['result'] = result\n",
+    "\n",
+    "        #   insert = pd.DataFrame(data,index=[0]) \n",
+    "        #   df = pd.concat([df,insert])\n",
+    "    else:\n",
+    "       print('done')\n",
+    "       break\n",
+    "      \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "6c80f9a6",
    "metadata": {},
