predデータのデータ修正

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "070d763f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "947c4352",
    "metadata": {},
    "outputs": [],
@@ -39,10 +39,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
+     "ename": "KeyError",
+     "evalue": "-1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 72\u001b[0m\n\u001b[1;32m     69\u001b[0m   data[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_object\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     70\u001b[0m   data[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_predcard\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 72\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43mpred_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m):\n\u001b[1;32m     73\u001b[0m   p \u001b[38;5;241m=\u001b[39m pred_data[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][k]\n\u001b[1;32m     74\u001b[0m   data[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mk\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_object\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(p[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mKeyError\u001b[0m: -1"
      ]
     }
    ],
@@ -56,92 +60,88 @@
     "    if loding_index < loding_rows+1:\n",
     "        log = list(row)\n",
     "        result = log[-1]\n",
-    "        if (result!='win' and result!='lose'):\n",
-    "          print('勝利判定が行われていないデータを検知')\n",
-    "          print(loding_index)\n",
-    "          break\n",
-    "        # log = log[:-1]\n",
-    "        # for l in log:\n",
-    "        #   data = {}\n",
-    "        #   l = ast.literal_eval(l)\n",
-    "        #   now = l['now']\n",
-    "        #   kind = l['kind']\n",
-    "        #   choices = l['choices']\n",
-    "        #   choice = l['choice']\n",
-    "        #   # print(now.keys())\n",
-    "        #   card_number = now['card_number']\n",
-    "        #   my_hands = now['my_hands']\n",
-    "        #   my_played = now['my_played']\n",
-    "        #   other_played = now['other_played']\n",
-    "        #   look_hands = now['look_hands']\n",
-    "        #   looked_hands = now['looked_hands']\n",
-    "        #   pred_data = now['pred']\n",
-    "        #   reincarnation = int(now['reincarnation'])\n",
+    "        log = log[:-1]\n",
+    "        for l in log:\n",
+    "          data = {}\n",
+    "          l = ast.literal_eval(l)\n",
+    "          now = l['now']\n",
+    "          kind = l['kind']\n",
+    "          choices = l['choices']\n",
+    "          choice = l['choice']\n",
+    "          # print(now.keys())\n",
+    "          card_number = now['card_number']\n",
+    "          my_hands = now['my_hands']\n",
+    "          my_played = now['my_played']\n",
+    "          other_played = now['other_played']\n",
+    "          look_hands = now['look_hands']\n",
+    "          looked_hands = now['looked_hands']\n",
+    "          pred_data = now['pred']\n",
+    "          reincarnation = int(now['reincarnation'])\n",
     "          \n",
-    "        #   data['card_number'] = int(card_number)\n",
-    "        #   for j in range(2):\n",
-    "        #     if j < len(my_hands):\n",
-    "        #       data[f'my_hands_{j}'] = int(my_hands[j])\n",
-    "        #     else:\n",
-    "        #       data[f'my_hands_{j}'] = 0\n",
+    "          data['card_number'] = int(card_number)\n",
+    "          for j in range(2):\n",
+    "            if j < len(my_hands):\n",
+    "              data[f'my_hands_{j}'] = int(my_hands[j])\n",
+    "            else:\n",
+    "              data[f'my_hands_{j}'] = 0\n",
     "\n",
-    "        #   for j in range(15):\n",
-    "        #     if j < len(my_played):\n",
-    "        #       data[f'my_played_{j}'] = int(my_played[j])\n",
-    "        #     else:\n",
-    "        #       data[f'my_played_{j}'] = 0\n",
+    "          for j in range(15):\n",
+    "            if j < len(my_played):\n",
+    "              data[f'my_played_{j}'] = int(my_played[j])\n",
+    "            else:\n",
+    "              data[f'my_played_{j}'] = 0\n",
     "          \n",
-    "        #   for j in range(len(list(other_played.keys()))):\n",
-    "        #     for k in range(15):\n",
-    "        #       if k < len(other_played[j]):\n",
-    "        #         data[f'other_played_{j}_{k}'] = int(other_played[j][k])\n",
-    "        #       else:\n",
-    "        #         data[f'other_played_{j}_{k}'] = 0\n",
-    "            \n",
-    "        #     for k in range(15):\n",
-    "        #       if k < len(look_hands[j]):\n",
-    "        #         data[f'look_hands_{j}_{k}'] = int(look_hands[j][k])\n",
-    "        #       else:\n",
-    "        #         data[f'look_hands_{j}_{k}'] = 0\n",
-    "            \n",
-    "        #     for k in range(15):\n",
-    "        #       if k < len(looked_hands[j]):\n",
-    "        #         data[f'looked_hands_{j}_{k}'] = int(looked_hands[j][k])\n",
-    "        #       else:\n",
-    "        #         data[f'looked_hands_{j}_{k}'] = 0\n",
-    "            \n",
-    "        #     for k in range(2):\n",
-    "        #       if k < len(pred_data[j]):\n",
-    "        #         p = pred_data[j][k]\n",
-    "        #         data[f'pred_{j}_{k}_object'] = int(p['object'])\n",
-    "        #         data[f'pred_{j}_{k}_predcard'] = int(p['pred_card'])\n",
-    "        #       else:\n",
-    "        #         data[f'pred_{j}_{k}_object'] = 0\n",
-    "        #         data[f'pred_{j}_{k}_predcard'] = 0\n",
+    "          for j in range(now['players_length']):\n",
+    "            j += 1\n",
+    "            keys = list(other_played.keys())\n",
+    "            if j in keys:\n",
+    "              for k in range(15):\n",
+    "                if k < len(other_played[j]):\n",
+    "                  data[f'other_played_{j}_{k}'] = int(other_played[j][k])\n",
+    "                else:\n",
+    "                  data[f'other_played_{j}_{k}'] = 0\n",
     "              \n",
-    "        #       if k < len(pred_data[-1]):\n",
-    "        #         p = pred_data[-1][k]\n",
-    "        #         data[f'pred_{-1}_{k}_object'] = int(p['object'])\n",
-    "        #         data[f'pred_{-1}_{k}_predcard'] = int(p['pred_card'])\n",
-    "        #       else:\n",
-    "        #         data[f'pred_{-1}_{k}_object'] = 0\n",
-    "        #         data[f'pred_{-1}_{k}_predcard'] = 0\n",
+    "              for k in range(15):\n",
+    "                if k < len(look_hands[j]):\n",
+    "                  data[f'look_hands_{j}_{k}'] = int(look_hands[j][k])\n",
+    "                else:\n",
+    "                  data[f'look_hands_{j}_{k}'] = 0\n",
+    "              \n",
+    "              for k in range(15):\n",
+    "                if k < len(looked_hands[j]):\n",
+    "                  data[f'looked_hands_{j}_{k}'] = int(looked_hands[j][k])\n",
+    "                else:\n",
+    "                  data[f'looked_hands_{j}_{k}'] = 0\n",
+    "              \n",
+    "              for k in range(2):\n",
+    "                if k < len(pred_data[j]):\n",
+    "                  p = pred_data[j][k]\n",
+    "                  data[f'pred_{j}_{k}_object'] = int(p['object'])\n",
+    "                  data[f'pred_{j}_{k}_predcard'] = int(p['pred_card'])\n",
+    "                else:\n",
+    "                  data[f'pred_{j}_{k}_object'] = 0\n",
+    "                  data[f'pred_{j}_{k}_predcard'] = 0\n",
+    "                \n",
+    "                if k < len(pred_data[1]):\n",
+    "                  p = pred_data[-1][k]\n",
+    "                  data[f'pred_{-1}_{k}_object'] = int(p['object'])\n",
+    "                  data[f'pred_{-1}_{k}_predcard'] = int(p['pred_card'])\n",
+    "                else:\n",
+    "                  data[f'pred_{-1}_{k}_object'] = 0\n",
+    "                  data[f'pred_{-1}_{k}_predcard'] = 0\n",
     "          \n",
-    "        #   data['reincarnation'] = reincarnation\n",
-    "        #   data['kind'] = kind\n",
-    "        #   for i in range(10):\n",
-    "        #     if i < len(choices):\n",
-    "        #       data[f'choices_{i}'] = choices[i]\n",
-    "        #     else:\n",
-    "        #       data[f'choices_{i}'] = 0\n",
-    "        #   data['choice'] = choice\n",
-    "        #   data['result'] = result\n",
+    "          data['reincarnation'] = reincarnation\n",
+    "          data['kind'] = kind\n",
+    "          for i in range(10):\n",
+    "            if i < len(choices):\n",
+    "              data[f'choices_{i}'] = choices[i]\n",
+    "            else:\n",
+    "              data[f'choices_{i}'] = 0\n",
+    "          data['choice'] = choice\n",
+    "          data['result'] = result\n",
     "\n",
-    "        #   insert = pd.DataFrame(data,index=[0]) \n",
-    "        #   df = pd.concat([df,insert])\n",
-    "    else:\n",
-    "       print('done')\n",
-    "       break\n",
+    "          insert = pd.DataFrame(data,index=[0]) \n",
+    "          df = pd.concat([df,insert])\n",
     "      \n"
    ]
   },
